--- a/lab 3/CSS/styles.css
+++ b/lab 3/CSS/styles.css
@@ -1,44 +1,35 @@
 body {
     background-color: #048ABF;
-    font-size: 18px;
-<<<<<<< HEAD
+    font-size: 20px;
     
     
-=======
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
 }
 img {
     display: block;
-    max-width: 200%;
-<<<<<<< HEAD
+    max-width: 100%;
+    height: 50%;
     margin: auto;
-=======
-    margin: 0 auto;
-    size: 100px;
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
+    align-content: center;
+
+    
+    
+
 }
 
 /* Moblie Style */
 
 #container {
     background-color: #F28705;
-    margin: 20px;
+    margin:auto;
 }
 header {
     padding: 60px 40px;
     border-bottom: 4px solid #F28705;
-<<<<<<< HEAD
     
-=======
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
 }
 header h1 {
 text-align: center;
 font-size: 2.5em;
-<<<<<<< HEAD
-
-=======
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
 }
 
 .col { 
@@ -46,29 +37,17 @@ font-size: 2.5em;
     padding: 100px;
     margin: 20px;
     border-radius: 20px;
-<<<<<<< HEAD
-    text-align: center;
-    align-content: center;
-}
-
-
-
-.col h2 {
-    text-align: center;
-    font-size: 2em;
-    width: 100px auto;
-    margin: 30px auto;
-=======
+    
 }
 
 .col h2 {
     text-align: center;
     font-size: 2em;
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
 }
 
 .col image {
     width: 50%;
+
 }
 
 footer {
@@ -85,25 +64,27 @@ footer {
    }
     .col {
        width: 50%;
-<<<<<<< HEAD
+       margin: auto;
+       margin-top: 40px;
+    
       
    }
    
     .col img {
         width: 50%;
-       
-=======
+       align-content: center;
        margin: 20px auto;
    }
    
     .col img {
-        width: 30%;
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
+        width: 100%;
+
     }
 }
   
 .main_img {
 display: none;
+align-content: center;
 }
 
 @media (min-width: 1024px) {
@@ -113,47 +94,31 @@ display: none;
     }
     #flex {
         display: flex;
-<<<<<<< HEAD
         align-content: center;
 }
 
 .col {
     align-content: center;
-    width: auto;
-    height: auto;
+    margin: 0 auto;
+    text-align: center;
+    
+    
 }
 
 .col img {
-    width: 100%;
-    height: 65%;
-   
+    width: 140%;
+    height: 40%;
    
 
    
-=======
-}
-
-.col {
-    margin: 20px;
-}
-
-.col img {
-    width: 50%;
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
 }
 
 .main_img {
     display: block;
-<<<<<<< HEAD
     width: 40%;
     margin: 20px auto;
    align-content: center;
 
 }
+
 }
-=======
-    width: 30%;
-    margin: 20px auto;
-}
-}
->>>>>>> 80cb91bcaed6dd2ad283c2c369ee9a26be39e19d
